--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.1.0",
     "@expo-google-fonts/inter": "^0.2.3",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
@@ -25,6 +26,7 @@
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-animatable": "^1.3.3",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-paper": "^5.8.0",
